rwd header, fixing layout shifting issues

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,30 +6,66 @@
   padding-inline: var(--size-3);
   padding-block: var(--size-2);
 
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+
+  grid-template-columns: minmax(3rem, auto) minmax(3rem, auto) minmax(3rem, 1fr) auto;
+  grid-template-rows: auto auto;
   gap: var(--size-3);
+
+  grid-template-areas:
+    "logo nbst srpa srpa"
+    "prfi cind sbst thsw";
 
   position: sticky;
   inset-block-start: 0;
 }
 
-.header-skeleton {
-  grid-area: header;
+.header__logo {
+  grid-area: logo;
+}
 
-  background: var(--surface-2);
-  color: var(--brand);
-  padding-inline: var(--size-3);
-  padding-block: var(--size-2);
+.header__navbar-sheet-trigger {
+  grid-area: nbst;
+  place-self: center start;
+}
 
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: var(--size-3);
+.header__search-panel {
+  grid-area: srpa;
+  place-self: center end;
+}
 
-  position: sticky;
-  inset-block-start: 0;
+.header__product-filter-indicator {
+  grid-area: prfi;
+  place-self: center end;
+}
+
+.header__cart-indicator {
+  grid-area: cind;
+  place-self: center start;
+}
+
+.header__sidebar-sheet-trigger {
+  grid-area: sbst;
+  place-self: center end;
+}
+
+.header__theme-switcher {
+  grid-area: thsw;
+  place-self: center end;
+}
+
+/* || MEDIA QUERIES */
+
+/* Medium screens */
+@media screen and (min-width: 768px) {
+  .header {
+    grid-template-columns: auto minmax(3rem, auto) minmax(3rem, 1fr) 1fr 3fr minmax(3rem, auto) auto;
+    grid-template-rows: auto;
+
+    grid-template-areas: "logo nbst prfi cind srpa sbst thsw";
+  }
+
+  .header__search-panel {
+    place-self: center start;
+  }
 }
